--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <div id="calendar"></div>
     <button id="save-btn">Save Notes</button>
   </div>
+
+  <!-- Now we place the script here to ensure DOM is fully loaded before execution -->
   <script src="app.js"></script>
   <script src="service-worker.js"></script>
 </body>
